@@ -47,7 +47,7 @@
 # Package version 2.3.0
 SET(OPENWSMAN_MAJOR "2")
 SET(OPENWSMAN_MINOR "3")
-SET(OPENWSMAN_PATCH "1")
+SET(OPENWSMAN_PATCH "2")
 
 # Plugin API 2.2
 SET(OPENWSMAN_PLUGIN_API_MAJOR "2")
