@@ -1,6 +1,9 @@
 2.3.2
 - Bindings
   - Add ClientOptions#flags() (read) and ClientOptions#reset_flags()
+  - Add Openwsman#uri_prefix
+  - Add Openwsman#create_doc_from_string
+  - Provide full EndPointReference handling
 
 2.3.1
 - Features
